--- a/www/partials/addpatient/plan/drug.html
+++ b/www/partials/addpatient/plan/drug.html
@@ -1,25 +1,17 @@
 <ion-view view-title="药物列表">
-<ion-nav-bar class="bar-positive">
-	<ion-nav-buttons side="primary">
-		<button class="button button-icon ion-arrow-left-c" ng-click="onClickBackward()">
-		</button>
-	</ion-nav-buttons>
-	<ion-nav-buttons side="secondary">
-		<button class="button button-icon icon ion-plus" ng-click="addItem()"></button>
-	</ion-nav-buttons>
-</ion-nav-bar>
-<div class="bar-shadow"></div>
+	<ion-nav-bar class="bar-positive">
+		<ion-nav-buttons side="primary">
+			<button class="button button-icon ion-arrow-left-c" ng-click="onClickBackward()">
+			</button>
+		</ion-nav-buttons>
+		<ion-nav-buttons side="secondary">
+			<button class="button" ng-click="addItem()">添加</button>
+			<button class="button" ng-click="Confirm()" ng-if="isloaded">保存</button>	
+		</ion-nav-buttons>
+	</ion-nav-bar>
+	<div class="bar-shadow"></div>
 	<ion-content>
 		<div class = "list">
-			<!-- <a class = "item item-icon-right" ng-repeat = "item in task.list " href = "#">
-			{{item.Description}}
-				<div ng-click="EditTask(item)">
-				    <i class="icon ion-edit" style="margin-right:40px;"></i>	
-				</div>
-				<div ng-click="RemoveItem(item)">
-				    <i class="icon ion-ios-minus"></i>
-				</div>
-			</a> -->
 			<div class="list card" ng-repeat = "item in task.list">
       			<div class="item item-divider item-icon-right" style="background:rgba(183, 203, 237, 0.34)">      		
 					<b>{{item.Description}}</b>
@@ -35,10 +27,5 @@
       			</div>
     		</div>
 		</div>
-		<div style="text-align:center;padding:20px;">
-        <button class="button button-outline button-positive" style="width:60px;height:30px;" ng-click="Confirm()" ng-if="isloaded"> 
-        <span style="font-size:15px;color:blue;font-weight:bold">确定</span>
-        </button>
 	</ion-content>
-
 </ion-view>
